@@ -16,6 +16,7 @@ ovirt-host-deploy -- oVirt host deploy
  * vdsm: packages: use new method of libvirt reconfigure.
  * vdsm: packages: disable NetworkManager service.
  * gluster: packages: start glusterd if no reboot.
+ * tune: tuned: support gluster specific profile.
  * openstack: add neutron support.
  * build: re-introduce external gettext packaging.
 
